Bug 1913611 - Make `ModifierKeyState::InitInputEvent` and `KeymapWrapper::InitInputEvent` set `WidgetMouseEventBase::mButtons` of `eContextMenu` r=smaug

They do it only when given event class is expected one but they don't include
`ePointerEventClass` which is newly used for `eContextMenu` event since
bug 1675847.

Differential Revision: https://phabricator.services.mozilla.com/D219632